--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "pk <pkrasam@gmail.com> (https://ipfs.infura.io/ipfs/QmSXiR9Khm3yo1J67nUopvVBxFJ8YGN2fUGZ34Etr3m92x/)",
   "license": "MIT",
   "devDependencies": {
     "lite-server": "2.4.0"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "openzeppelin-solidity": "^2.2.0",
     "solc": "^0.5.2",
-    "solc-js": "^0.5.2"
+    "solc-js": "^0.5.2",
+    "truffle": "^5.5.12"
+  },
+  "overrides": {
+    "reselect-tree": "1.3.5"
   }
 }
