--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "lite-server": "2.4.0"
   },
   "dependencies": {
+    "@truffle/hdwallet-provider": "^2.0.8",
     "babel-runtime": "^6.26.0",
     "openzeppelin-solidity": "^2.2.0",
     "solc": "^0.5.2",
     "solc-js": "^0.5.2",
-    "truffle": "^5.5.12"
+    "truffle": "^5.5.12",
+    "web3": "^1.5.3"
   },
   "overrides": {
     "reselect-tree": "1.3.5"
